--- a/static/styles.css
+++ b/static/styles.css
@@ -5,8 +5,16 @@ body {
 .container {
     margin-top: 50px;
     padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 20px;
-    box-shadow: 2px 2px 5px;
+    padding-bottom: 10px;
     background-color: aliceblue;
+}
+
+.article {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 20px;
+    box-shadow: 2px 2px 5px;
+    background-color:cornsilk;
 }
