--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url(resources/greece_sea.jpeg)
+    background: rgb(34,193,195);
+    background: linear-gradient(183deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
 .container {
