--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -9,7 +9,7 @@
       <div class="container">
         <div class="card-deck">
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="../public/images_copy/beaches/greece_beach.jpg" alt="greek beach">
+            <img class="card-img-top" src="images/beaches/greece_beach.jpg" alt="greek beach">
             <div class="card-body">
               <h5 class="card-title">Greek Beach</h5>
               <p class="card-text">Not sure where it is but it looks hot.</p>
@@ -17,7 +17,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="../public/images/beaches/greece_beach2.jpg" alt="greek beach">
+            <img class="card-img-top" src="images/beaches/greece_beach2.jpg" alt="greek beach">
             <div class="card-body">
               <h5 class="card-title">Greek Beach</h5>
               <p class="card-text">Not sure where it is but it looks hot.</p>
@@ -36,21 +36,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="../public/images/beaches/greece_beach.jpg" alt="First slide">
+              <img class="d-block w-100" src="images/beaches/greece_beach.jpg" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
                 <h5>First beach</h5>
                 <p>Lookin' good!</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../public/images/beaches/greece_beach2.jpg" alt="Second slide">
+              <img class="d-block w-100" src="images/beaches/greece_beach2.jpg" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second beach</h5>
                 <p>Lookin' good!</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../public/images/beaches/greece_beach3.jpg" alt="Third slide">
+              <img class="d-block w-100" src="images/beaches/greece_beach3.jpg" alt="Third slide">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third beach</h5>
                 <p>Lookin' good!</p>
