--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("resources/beaches/greece_sea.jpeg");
+    background-image: url("../images/beaches/greece_sea.jpeg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
