--- a/views/administration_edit_user.ejs
+++ b/views/administration_edit_user.ejs
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <%- include("templates/header", {title: "Edit Profile (Admin)"}) -%>
-    </head>
+  <head>
+    <%- include("templates/header", {title: "Edit ..."}) -%>
+  </head>
     <body>
         <%- include("templates/navbar", {active: "administration"}) -%>
 
         <div class="container">
           <h1>Edit User</h1>
-          <form>
+          <form method="POST" action="/administration/edit/user/<%= user._id %>">
+            <input type="hidden" name="_id" value="<%= user._id %>">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="firstName">First Name</label>
-                <input type="text" class="form-control" value="<%= user.first_name %>" id="firstName" placeholder="First name">
+                <input type="text" class="form-control" value="<%= user.first_name %>" name="firstName" id="firstName" placeholder="First name">
               </div>
               <div class="form-group col-md-6">
                 <label for="lastName">Last Name</label>
-                <input type="text" class="form-control" value="<%= user.last_name %>" id="lastName" placeholder="Last name">
+                <input type="text" class="form-control" value="<%= user.last_name %>" name="lastName" id="lastName" placeholder="Last name">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="email">E-mail</label>
-                <input type="email" class="form-control" value="<%= user.email %>" id="email" placeholder="E-mail">
+                <input type="email" class="form-control" value="<%= user.email %>" name="email" id="email" placeholder="E-mail">
               </div>
               <div class="form-group col-md-6">
                 <label for="telNum">Telephone Number</label>
-                <input type="tel" class="form-control" value="<%= user.tel %>" id="telNum" placeholder="Telephone number">
+                <input type="tel" class="form-control" value="<%= user.tel %>" name="telNum" id="telNum" placeholder="Telephone number">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="newPassword">Password</label>
-                <input type="password" class="form-control" value="<%= user.password %>" id="newPassword" placeholder="New password">
+                <input type="password" class="form-control" value="<%= user.password %>" name="password" id="password" placeholder="New password">
               </div>
               <div class="form-group col-md-6">
                 <label for="newPasswordAgain">Repeat Password</label>
-                <input type="password" class="form-control" value="<%= user.password %>" id="newPasswordAgain" placeholder="Repeat new password">
+                <input type="password" class="form-control" value="<%= user.password %>" name="passwordAgain" id="passwordAgain" placeholder="Repeat new password">
               </div>
             </div>
-            <a class="btn btn-success" href="/administration/edit/user/<%= user._id %>" role="button">Save</a>
+            <input type="submit" class="btn btn-primary" value="Save"/>
             <a class="btn btn-danger" href="/administration" role="button">Cancel</a>
           </form>
+          <%- include("templates/alert") %>
         </div>
 
         <div class="container">
