--- a/views/administration_new_user.ejs
+++ b/views/administration_new_user.ejs
@@ -8,40 +8,41 @@
 
         <div class="container">
           <h1>New User</h1>
-          <form>
+          <form method="POST" action="/administration/new_user">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="firstName">First Name</label>
-                <input type="text" class="form-control" value="Erik" id="firstName" placeholder="First name">
+                <input type="text" class="form-control" value="Erik" name="firstName" id="firstName" placeholder="First name">
               </div>
               <div class="form-group col-md-6">
                 <label for="lastName">Last Name</label>
-                <input type="text" class="form-control" value="Fazakas" id="lastName" placeholder="Last name">
+                <input type="text" class="form-control" value="Fazakas" name="lastName" id="lastName" placeholder="Last name">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="email">E-mail</label>
-                <input type="email" class="form-control" value="erik.fazakas@kuka.com" id="email" placeholder="E-mail">
+                <input type="email" class="form-control" value="erik.fazakas@kuka.com" name="email" id="email" placeholder="E-mail">
               </div>
               <div class="form-group col-md-6">
                 <label for="telNum">Telephone Number</label>
-                <input type="tel" class="form-control" value="+36501227369" id="telNum" placeholder="Telephone number">
+                <input type="tel" class="form-control" value="+36501227369" name="telNum" id="telNum" placeholder="Telephone number">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="newPassword">Password</label>
-                <input type="password" class="form-control" value="example" id="newPassword" placeholder="New password">
+                <input type="password" class="form-control" value="example" name="password" id="password" placeholder="New password">
               </div>
               <div class="form-group col-md-6">
                 <label for="newPasswordAgain">Repeat Password</label>
-                <input type="password" class="form-control" value="example" id="newPasswordAgain" placeholder="Repeat new password">
+                <input type="password" class="form-control" value="example" name="passwordAgain" id="passwordAgain" placeholder="Repeat new password">
               </div>
             </div>
-            <a class="btn btn-success" href="/administration" role="button">Add</a>
+            <input type="submit" class="btn btn-primary" value="Register"/>
             <a class="btn btn-danger" href="/administration" role="button">Cancel</a>
           </form>
+          <%- include("templates/alert") %>
         </div>
 
         <%- include("templates/footer") %>
