--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,22 +6,19 @@
     <body>
         <div class="container">
             <h1>Sign In</h1>
-            <form action="/user" method="post">
+            <form method="POST" action="/login">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" placeholder="Enter username" value="admin">
+                    <input type="text" class="form-control" name="username" placeholder="Enter username" value="admin">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Password" value="admin">
+                    <input type="password" class="form-control" name="password" placeholder="Password" value="admin">
                 </div>
-                <a class="btn btn-primary" href="/news" role="button">Submit</a>
-              </form>
+                <input type="submit" class="btn btn-primary" value="Let me in!"/>
+            </form>
+            <%- include("templates/alert") %>
         </div>
-
-        <% if(typeof err !== "undefined") { %>
-            <%= err %>
-        <%};%>
 
         <%- include("templates/footer") %>
     </body>
