--- a/views/news.ejs
+++ b/views/news.ejs
@@ -8,22 +8,14 @@
 
         <div class="container">
           <h1>News</h1>
-          <%- include(
-                "templates/news/article", 
-                {
-                  title: "First Article", 
-                  text: "This is an example article which will be better looking and organized."
-                }
-              ) 
-          -%>
-          <%- include(
-                "templates/news/article", 
-            {
-              title: "Second Article", 
-              text: "This is another example article which will be better looking and organized."
-            }
-          ) 
-          -%>
+          <div class="article">
+            <h2>First Article</h2>
+            This is an example article which will be better looking and organized.
+          </div>
+          <div class="article">
+            <h2>Second Article</h2>
+            This is another example article which will be better looking and organized.
+          </div>
         </div>
 
         <%- include("templates/footer") %>
