--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -48,7 +48,7 @@
             </div>
             <a class="btn btn-primary" href="/profile" role="button">Save</a>
           </form>
-
+          <%- include("templates/alert") %>
         </div>
 
         <%- include("templates/footer") %>
