--- a/views/administration_edit_user.ejs
+++ b/views/administration_edit_user.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include("templates/header", {title: "Edit ..."}) -%>
+    <%- include("templates/header", {title: "Edit User"}) -%>
   </head>
     <body>
         <%- include("templates/navbar", {active: "administration"}) -%>
 
         <div class="container">
           <h1>Edit User</h1>
-          <form method="POST" action="/administration/edit/user/<%= user._id %>">
+          <form method="POST" action="/administration/edit/user">
             <input type="hidden" name="_id" value="<%= user._id %>">
             <div class="form-row">
               <div class="form-group col-md-6">
@@ -27,7 +27,7 @@
               </div>
               <div class="form-group col-md-6">
                 <label for="telNum">Telephone Number</label>
-                <input type="tel" class="form-control" value="<%= user.tel %>" name="telNum" id="telNum" placeholder="Telephone number">
+                <input type="tel" class="form-control" value="<%= user.tel %>" name="tel" id="tel" placeholder="Telephone number">
               </div>
             </div>
             <div class="form-row">
@@ -40,6 +40,10 @@
                 <input type="password" class="form-control" value="<%= user.password %>" name="passwordAgain" id="passwordAgain" placeholder="Repeat new password">
               </div>
             </div>
+            <input type="hidden" id="previousPath" name="previousPath">
+            <script>
+              document.getElementById("previousPath").setAttribute("value", window.location.pathname);
+            </script>
             <input type="submit" class="btn btn-primary" value="Save"/>
             <a class="btn btn-danger" href="/administration" role="button">Cancel</a>
           </form>
@@ -50,13 +54,25 @@
             <h1>Reservations of <%= user.first_name %></h1>
             <table class="table">
               <tbody>
-                  <% reservations.forEach(function(reservation){ %>
+                  <% user.reservations.forEach(function(reservation){ %>
                     <tr>
                       <td>
-                        <%= reservation.date %>
+                        <%= reservation.date.toLocaleDateString("hu-HU") %>
                       </td>
                       <td>
-                        <a class="btn btn-danger" href="#" role="button">Cancel</a>
+                        <%= reservation.name %>
+                      </td>
+                      <td>
+                        <div id="cancel_form">
+                          <form action="/reservations/del" method="post">
+                            <input type="hidden" name="_id" value="<%= reservation._id %>">
+                            <input type="hidden" id="previousPath_<%= reservation._id %>" name="previousPath">
+                            <input type="submit" value="Cancel" class="btn btn-danger">
+                          </form>
+                          <script>
+                            document.getElementById("previousPath_<%= reservation._id %>").setAttribute("value", window.location.pathname);
+                          </script>
+                        </div>
                       </td>
                     </tr>
                   <% }); %>
