--- a/views/administration_new_user.ejs
+++ b/views/administration_new_user.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <%- include("templates/header", {title: "New Profile (Admin)"}) -%>
+      <%- include("templates/header", {title: "New Profile"}) -%>
     </head>
     <body>
         <%- include("templates/navbar", {active: "administration"}) -%>
@@ -11,35 +11,45 @@
           <form method="POST" action="/administration/new_user">
             <div class="form-row">
               <div class="form-group col-md-6">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" value="eltonj" name="username" id="username" placeholder="Username">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
                 <label for="firstName">First Name</label>
-                <input type="text" class="form-control" value="Erik" name="firstName" id="firstName" placeholder="First name">
+                <input type="text" class="form-control" value="Elton" name="firstName" id="firstName" placeholder="First name">
               </div>
               <div class="form-group col-md-6">
                 <label for="lastName">Last Name</label>
-                <input type="text" class="form-control" value="Fazakas" name="lastName" id="lastName" placeholder="Last name">
+                <input type="text" class="form-control" value="John" name="lastName" id="lastName" placeholder="Last name">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="email">E-mail</label>
-                <input type="email" class="form-control" value="erik.fazakas@kuka.com" name="email" id="email" placeholder="E-mail">
+                <input type="email" class="form-control" value="elton.john@citromail.hu" name="email" id="email" placeholder="E-mail">
               </div>
               <div class="form-group col-md-6">
                 <label for="telNum">Telephone Number</label>
-                <input type="tel" class="form-control" value="+36501227369" name="telNum" id="telNum" placeholder="Telephone number">
+                <input type="tel" class="form-control" value="+36421234567" name="tel" id="tel" placeholder="Telephone number">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="newPassword">Password</label>
-                <input type="password" class="form-control" value="example" name="password" id="password" placeholder="New password">
+                <input type="password" class="form-control" value="passofelton" name="password" id="password" placeholder="New password">
               </div>
               <div class="form-group col-md-6">
                 <label for="newPasswordAgain">Repeat Password</label>
-                <input type="password" class="form-control" value="example" name="passwordAgain" id="passwordAgain" placeholder="Repeat new password">
+                <input type="password" class="form-control" value="passofelton" name="passwordAgain" id="passwordAgain" placeholder="Repeat new password">
               </div>
             </div>
-            <input type="submit" class="btn btn-primary" value="Register"/>
+            <input type="hidden" id="previousPath" name="previousPath">
+            <script>
+              document.getElementById("previousPath").setAttribute("value", window.location.pathname);
+            </script>
+            <input type="submit" class="btn btn-primary" value="Save"/>
             <a class="btn btn-danger" href="/administration" role="button">Cancel</a>
           </form>
           <%- include("templates/alert") %>
