--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,45 +8,49 @@
 
         <div class="container">
 
-          <form>
+          <form method="POST" action="/profile">
             <h1>Profile</h1>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="firstName">First Name</label>
-                <input type="text" class="form-control" value="<%= user.first_name %>" id="firstName" placeholder="First name">
+                <input type="text" class="form-control" value="<%= user.first_name %>" name="firstName" id="firstName" placeholder="First name">
               </div>
               <div class="form-group col-md-6">
                 <label for="lastName">Last Name</label>
-                <input type="text" class="form-control" value="<%= user.last_name %>" id="lastName" placeholder="Last name">
+                <input type="text" class="form-control" value="<%= user.last_name %>" name="lastName" id="lastName" placeholder="Last name">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="email">E-mail</label>
-                <input type="email" class="form-control" value="<%= user.email %>" id="email" placeholder="E-mail">
+                <input type="email" class="form-control" value="<%= user.email %>" name="email" id="email" placeholder="E-mail">
               </div>
               <div class="form-group col-md-6">
                 <label for="telNum">Telephone Number</label>
-                <input type="tel" class="form-control" value="<%= user.tel %>" id="telNum" placeholder="Telephone number">
+                <input type="tel" class="form-control" value="<%= user.tel %>" name="tel" id="tel" placeholder="Telephone number">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="newPassword">New Password</label>
-                <input type="password" class="form-control" value="<%= user.password %>" id="newPassword" placeholder="New password">
+                <input type="password" class="form-control" value="<%= user.password %>" name="password" id="password" placeholder="New password">
               </div>
               <div class="form-group col-md-6">
                 <label for="newPasswordAgain">Repeat New Password</label>
-                <input type="password" class="form-control" value="<%= user.password %>" id="newPasswordAgain" placeholder="Repeat new password">
+                <input type="password" class="form-control" value="<%= user.password %>" name="passwordAgain" id="passwordAgain" placeholder="Repeat new password">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group">
                 <label for="currentPassword">Current Password</label>
-                <input type="password" class="form-control" id="currentPassword" placeholder="Current password">
+                <input type="password" class="form-control" name="currentPassword" id="currentPassword" placeholder="Current password">
               </div>
             </div>
-            <a class="btn btn-primary" href="/profile" role="button">Save</a>
+            <input type="hidden" id="previousPath" name="previousPath">
+            <script>
+              document.getElementById("previousPath").setAttribute("value", window.location.pathname);
+            </script>
+            <input type="submit" class="btn btn-primary" value="Save" role="button"/>
           </form>
           <%- include("templates/alert") %>
         </div>
