--- a/views/reservations_new.ejs
+++ b/views/reservations_new.ejs
@@ -14,6 +14,8 @@
               <input type="date" class="form-control" id="startDate" name="startDate" aria-describedby="startDate" value="2024-02-04" min="2022-09-27" max="2024-04-02">
               <label for="endDate">Check-out Date</label>
               <input type="date" class="form-control" id="endDate" name="endDate" aria-describedby="endDate" value="2023-04-02" min="2022-09-27" max="2024-04-02">
+              <label for="name">Title</label>
+              <input type="text" class="form-control" id="name" name="name" aria-describedby="name" value="Demo create reservation">
             </div>
             <input type="submit" class="btn btn-primary" value="Reserve"/>
           </form>
