--- a/views/reservations_own.ejs
+++ b/views/reservations_own.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <%- include("templates/header", {title: "Reservations of ..."}) -%>
+      <%- include("templates/header", {title: "User Reservations"}) -%>
     </head>
     <body>
         <%- include("templates/navbar", {active: "reservations"}) -%>
@@ -10,13 +10,25 @@
           <h1><%= (session_user._id === user._id) ? "Own Reservations" : "Reservations of " + user.first_name %> </h1>
           <table class="table">
             <tbody>
-                <% reservations.forEach(function(reservation){ %>
+                <% user.reservations.forEach(function(reservation){ %>
                   <tr>
                     <td>
-                      <%= reservation.date %>
+                      <%= reservation.date.toLocaleDateString("hu-HU") %>
                     </td>
                     <td>
-                      <a class="btn btn-danger" href="#" role="button">Cancel</a>
+                      <%= reservation.name %>
+                    </td>
+                    <td>
+                      <div id="cancel_form">
+                        <form action="/reservations/del" method="post">
+                          <input type="hidden" name="_id" value="<%= reservation._id %>">
+                          <input type="hidden" id="previousPath_<%= reservation._id %>" name="previousPath">
+                          <input type="submit" value="Cancel" class="btn btn-danger">
+                        </form>
+                        <script>
+                          document.getElementById("previousPath_<%= reservation._id %>").setAttribute("value", window.location.pathname);
+                        </script>
+                      </div>
                     </td>
                   </tr>
                 <% }); %>
