--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,6 +10,7 @@
 
           <form method="POST" action="/profile">
             <h1>Profile</h1>
+            <input type="hidden" name="_id" value="<%= user._id %>">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="firstName">First Name</label>
